<resources>
    <string name="app_name">Android Engineer CodeCheck</string>
    <string name="searchInputText_hint">GitHub のリポジトリを検索できるよー</string>
    <string name="written_language">Written in %s</string>
    <string name="stars">%1$d stars</string>
    <string name="watchers">%1$d watchers</string>
    <string name="forks">%1$d forks</string>
    <string name="open_issues">%1$d open issues</string>

    <!-- BEGIN - Network Error Dialog Strings -->

    <!-- Title for the network error dialog -->
    <string name="network_error_title">No Internet Connection</string>
    <!-- Message describing the network error -->
    <string name="network_error_message">Please check your internet connection and try again.</string>
    <!-- Text for the button to open device settings -->
    <string name="open_settings">Open Settings</string>
    <!-- Text for the button to dismiss the dialog -->
    <string name="dismiss">Exit</string>

    <!-- BEGIN - Repository Item UI  Strings -->
    <string name="item_additional_information">Additional detailed information about the item</string>
    <string name="item_additional_info_title">Information</string>
    <string name="default_repo_fork_count">78</string>
    <string name="default_repo_view_count">87</string>
    <string name="default_repo_star_count">88</string>
    <string name="default_repo_item_title">JetBrains/kotlin</string>
    <string name="repo_item_image_content_desc">repo item image</string>
    <string name="search_github">Search GitHub</string>
    <string name="empty_query_error">Please enter a search query</string>
    <string name="repository_icon">Repository icon</string>
    <!-- END - Repository Item UI  Strings -->

</resources>