<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/main_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Main Image -->
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="205dp"
                android:layout_height="208dp"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/circle_gradient"
                android:contentDescription="@string/repo_item_image_content_desc" />

            <!-- Icon Image -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ownerIconView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4"
                app:shapeAppearanceOverlay="@style/roundedImageRounded"
                tools:srcCompat="@drawable/jetbrains" />

            <!-- Name View -->
            <TextView
                android:id="@+id/nameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_repo_item_title"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />

            <!-- Linear Stats Layout -->
            <LinearLayout
                android:id="@+id/linearStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/nameView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- Stat TextViews (Stars, Watchers, Forks) -->
                <LinearLayout
                    android:layout_width="352dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="28dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/nameView"
                    tools:layout_editor_absoluteX="29dp"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/starsView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:text="@string/default_repo_star_count"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:drawableTint="@color/white"
                        app:drawableStartCompat="@drawable/baseline_star_24" />

                    <TextView
                        android:id="@+id/watchersView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginEnd="64dp"
                        android:drawablePadding="4dp"
                        android:text="@string/default_repo_view_count"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:drawableTint="@color/white"
                        app:drawableStartCompat="@drawable/baseline_remove_red_eye_24" />

                    <TextView
                        android:id="@+id/forksView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:text="@string/default_repo_fork_count"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:drawableTint="@color/white"
                        app:drawableStartCompat="@drawable/baseline_fork_right_24" />
                </LinearLayout>
            </LinearLayout>

            <!-- Information TextView -->
            <TextView
                android:id="@+id/textViewInfo"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:drawablePadding="8dp"
                android:text="@string/item_additional_info_title"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/linearStats"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:drawableTint="@color/white"
                app:drawableStartCompat="@drawable/baseline_info_24" />

            <!-- Additional Information TextView -->
            <TextView
                android:id="@+id/textDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/item_additional_information"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/textViewInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

